# his

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  root.sql  services.patch  sqlx-data.json
crates/app-auth/: Cargo.toml
crates/app-auth/src/: jwks.rs  keycloak.rs  lib.rs  validator.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: lib.rs  loader.rs  types.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs  pagination.rs  result_ext.rs  time.rs
crates/app-error/: Cargo.toml
crates/app-error/src/: lib.rs  problem_details.rs
crates/app-kafka/: Cargo.toml
crates/app-kafka/src/: consumer.rs  lib.rs  producer.rs  topics.rs
crates/app-outbox/: Cargo.toml
crates/app-outbox/src/: dispatcher.rs  lib.rs  model.rs  store.rs
crates/app-telemetry/: Cargo.toml
crates/app-telemetry/src/: lib.rs  logging.rs  metrics.rs  tracing_init.rs
crates/app-web/: Cargo.toml
crates/app-web/src/: lib.rs  service_helpers.rs
crates/app-web/src/extractors/: auth_user.rs  etag.rs  mod.rs  pagination.rs
crates/app-web/src/infrastructure/: kafka.rs  mod.rs
crates/app-web/src/middleware/: auth.rs  cache.rs  cors.rs  mod.rs  rate_limit.rs  request_id.rs  timeout.rs
crates/app-web/src/responders/: json_problem.rs  mod.rs
crates/app-web/src/security/: mod.rs
services/audit-service/: Cargo.toml
services/audit-service/migrations/: 20250914_000001_audit_events.sql
services/audit-service/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/audit-service/src/config/: loader.rs  mod.rs  types.rs
services/audit-service/src/domain/: mod.rs
services/audit-service/src/http/: routes.rs
services/audit-service/src/infra/: iam_client.rs  mod.rs
services/dms-service/: Cargo.toml
services/dms-service/migrations/: 20250914_000001_objects.sql  20250914_000002_signatures.sql
services/dms-service/src/: bootstrap.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/iam-service/: .env.example  Cargo.toml  Makefile
services/iam-service/migrations/: 20250914_000001_audit_user_login.sql  20250914_000004_policies.sql
services/iam-service/src/: api_doc.rs  bootstrap.rs  error.rs  events.rs  lib.rs  main.rs  prelude.rs  rbac.rs  telemetry.rs  utils.rs
services/inventory-service/: COMPLETION_REPORT.md  Cargo.toml  Makefile  README.md  env.example
services/inventory-service/migrations/: 0001_warehouses.sql  0002_items.sql  0003_lots.sql  0004_stocks.sql  0005_movements.sql  0006_uom.sql  0007_suppliers.sql  0008_purchase_orders.sql  0009_goods_receipt.sql  0010_stock_transactions.sql  20250914_000001_items.sql  20250914_000002_stocks.sql  20250914_000003_movements.sql  20250914_000004_po_grn.sql
services/inventory-service/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/iot-service/: Cargo.toml
services/iot-service/migrations/: 20250914_000001_devices_vitals.sql  20250914_000001_iot_tables.sql
services/iot-service/src/: bootstrap.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/lis-service/: Cargo.toml  Makefile  README.md
services/lis-service/migrations/: 0001_tests.sql  0002_specimens.sql  0003_results.sql  0004_result_values.sql  20250914_000001_lab_orders.sql  20250914_000002_specimens.sql  20250914_000003_results.sql
services/lis-service/src/: bootstrap.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/master-data-service/: Cargo.toml  Makefile  README.md  env.example
services/master-data-service/migrations/: 0001_init.sql  20250914_000001_com_code.sql  20250914_000002_department_room_bed.sql  20250914_000003_units.sql  20250914_000004_migrate_master_codes.sql  20250914_000005_seed_code_sets.sql  20250914_000006_organization.sql
services/master-data-service/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/patient-service/: Cargo.toml  Makefile  README.md
services/patient-service/benches/: parsing_bench.rs
services/patient-service/migrations/: 0001_patient.sql  0002_encounter.sql  20250914_000001_patients.sql  20250914_000002_encounters.sql  20250914_000003_outbox.sql
services/patient-service/src/: bootstrap.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/pharmacy-service/: .env.example  Cargo.toml  sqlx-data.json
services/pharmacy-service/migrations/: 0001_drug_catalog.sql  0002_prescriptions.sql  0004_dispenses.sql  0005_dispense_items.sql  20250914_000001_prescriptions.sql  20250914_000002_dispenses.sql  20250914_000002_prescriptions.sql  20250914_000003_prescription_items.sql  20250914_000003_returns.sql
services/pharmacy-service/src/: bootstrap.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/radiology-service/: Cargo.toml  Makefile  README.md  env.example
services/radiology-service/migrations/: 0001_procedures.sql  0002_orders.sql  0003_studies.sql  0004_series_images.sql  0005_reports.sql  0006_rad_order_items.sql  0007_rad_results.sql
services/radiology-service/src/: config.rs  error.rs  telemetry.rs
services/ris-pacs-service/: Cargo.toml
services/ris-pacs-service/migrations/: 20250914_000001_imaging_orders.sql  20250914_000002_studies.sql  20250914_000003_reports.sql
services/ris-pacs-service/src/: bootstrap.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/workflow-service/: .env.example  Cargo.toml  README.md
services/workflow-service/examples/: admission-workflow-diagram.md  advanced-features-guide.md  advanced-workflow-examples.json  patient-admission-workflow.json
services/workflow-service/migrations/: 20250914_000001_templates.sql  20250914_000002_instances.sql  20250914_000003_tasks.sql  20250914_000004_saga_log.sql  20250914_000005_outbox.sql
services/workflow-service/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
services/workflow-service/tests/: refund_flow_compensate.rs  surgery_prep_with_subflow.rs
(+1324 files in other folders)
