[package]
name = "app-auth"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "JWT/OIDC auth for HIS (Keycloak), implements app-web::AuthTokenValidator."

[dependencies]
# JSON & time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
thiserror = "1.0"
humantime = "2.1"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }

jsonwebtoken = "9"
async-trait = "0.1"

app-error = { path = "../app-error" }
app-web = { path = "../app-web" }
app-config = { path = "../app-config" }
