[package]
name = "app-config"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Unified config loader for HIS services (YAML + ENV overrides)."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
figment = { version = "0.10", features = ["env", "yaml"] }
thiserror = "1.0"
once_cell = "1.19"
humantime = "2.1"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
