[package]
name = "app-error"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "HIS unified error types with RFC7807 Problem Details and HTTP mapping (Actix-only)."

[features]
# Bật Actix theo mặc định để các service không cần set feature thủ công
default = ["actix"]
actix = ["dep:actix-web"]
# Tuỳ chọn ánh xạ lỗi SQLx
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
http = "1"
chrono = { version = "0.4", features = ["serde"] }

# Actix (only)
actix-web = { version = "4", optional = true }

# Optional DB error mapping
sqlx = { version = "0.7", optional = true, default-features = false }

[dev-dependencies]
pretty_assertions = "1.4"
