[package]
name = "app-telemetry"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Unified telemetry (tracing/logs/metrics) for HIS (Actix-first)."

[features]
default = []
actix = ["actix-web"]

[dependencies]
# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-opentelemetry = "=0.24.0"

# OpenTelemetry (unified 0.23 line)
opentelemetry = { version = "=0.23.0", features = ["trace"] }
opentelemetry_sdk = { version = "=0.23.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "=0.17.0", features = ["grpc-tonic"] }

# Metrics (Prometheus)
metrics = "=0.23.1"
metrics-exporter-prometheus = { version = "=0.13.1", default-features = false }

# Utils
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Local deps
app-config = { path = "../app-config" }

# Actix (chỉ khi bật feature `actix`)
actix-web = { version = "4", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
