[package]
name = "app-web"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Actix web utilities for HIS: middlewares, extractors, responders."

[features]
default = []

[dependencies]
actix-web = "4"
actix-cors = "0.7"
futures-util = "0.3"
tracing = "0.1"

# Rate limit
governor = { version = "0.6", default-features = false, features = ["std", "quanta", "dashmap"] }
dashmap = "6"
ahash = "0.8"

# Time & utils
tokio = { version = "1", features = ["rt", "time", "macros"] }
http = "1"
httpdate = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }

# Our crates
app-error = { path = "../app-error" }
app-telemetry = { path = "../app-telemetry" }
