[package]
name = "app-web"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Actix web utilities for HIS: middlewares, extractors, responders."

[features]
default = []

[dependencies]
actix-web = "4"
actix-cors = "0.7"
futures-util = "0.3"
tracing = "0.1"

# Rate limit
governor = { version = "0.6", default-features = false, features = ["std", "quanta", "dashmap"] }
dashmap = "6"
ahash = "0.8"

# Time & utils
tokio = { version = "1", features = ["rt", "time", "macros"] }
http = "1"
httpdate = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }

# Additional dependencies for bootstrap
actix-governor = "0.5"
actix-rt = "2"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"

# Our crates
app-error = { path = "../app-error" }
app-telemetry = { path = "../app-telemetry" }
app-config = { path = "../app-config" }
