[package]
name = "inventory-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
actix-web.workspace = true
actix-web-validator.workspace = true
actix-cors.workspace = true
actix-governor.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
validator.workspace = true

# Database
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
tokio.workspace = true

# HTTP client
reqwest.workspace = true

# API documentation
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Crypto
sha2.workspace = true

# Async utilities
futures-util.workspace = true

# Decimal for money/quantity
rust_decimal.workspace = true

# Workspace crates
app-auth.workspace = true
app-web.workspace = true
app-core.workspace = true
app-error.workspace = true
app-telemetry.workspace = true
app-config.workspace = true
