[package]
name = "patient-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
config = "0.14"
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.15", features = ["derive"] }
actix-web-validator = "4"
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Kafka (optional) - disabled for now due to CMake requirement
# rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# JWT if needed
jsonwebtoken = "9"
# OpenAPI
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Hash for ETag
sha2 = "0.10"
# Futures support
futures-util = "0.3"

# workspace crates
app-auth = { path = "../../crates/app-auth" }
app-error = { path = "../../crates/app-error" }
app-telemetry = { path = "../../crates/app-telemetry" }
app-web = { path = "../../crates/app-web" }
# app-kafka = { path = "../../crates/app-kafka" }  # Disabled due to CMake requirement
app-config = { path = "../../crates/app-config" }

[features]
default = []
# kafka = ["rdkafka"]

[profile.release]
codegen-units = 1
lto = true
