[package]
name = "pharmacy-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-web-validator = { workspace = true }
actix-cors = { workspace = true }
actix-governor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
sqlx = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
rust_decimal = { workspace = true }
futures-util = { workspace = true }

# Workspace crates
app-auth = { path = "../../crates/app-auth" }
app-web = { path = "../../crates/app-web" }
app-config = { path = "../../crates/app-config" }
app-error = { path = "../../crates/app-error", features = ["sqlx"] }
app-telemetry = { path = "../../crates/app-telemetry", features = ["actix"] }
app-core = { path = "../../crates/app-core", features = ["sqlx"] }
